--- a/src/style/include/_home.scss
+++ b/src/style/include/_home.scss
@@ -43,6 +43,7 @@
         line-height: 1;
         margin-bottom: 15px;
         letter-spacing: 3px;    
+        color: #ffffff;
       }
 
       h2 {
@@ -51,6 +52,10 @@
         line-height: 1;
         margin-bottom: 20px;
         letter-spacing: 3px;
+      }
+
+      p {
+        color: #ffffff;
       }
     }
   }
