--- a/src/style/include/_menu.scss
+++ b/src/style/include/_menu.scss
@@ -154,3 +154,7 @@
       padding: 10px 0px;
     }
   }
+
+  .menu-landing-section {
+    background: url("../assets/menu/MenuBg.jpg") no-repeat center center;
+  }
