--- a/src/style/include/_shop.scss
+++ b/src/style/include/_shop.scss
@@ -86,3 +86,8 @@
     height: auto;
   }
 }
+
+
+.shop-landing-section {
+  background: url("../assets/shop/ShopBg.jpg") no-repeat center center;
+}
